--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,7 +35,8 @@ html {
   /* color: var(--foreground-color); */
   max-width: 100vw;
   overflow-x: hidden;
-  overflow: hidden;
+  height: 100%;
+  overflow: auto; /* Allow scrolling */
 }
 
 body {
@@ -46,7 +47,8 @@ body {
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Prevent tiling */
   background-attachment: fixed; /* Keep the image fixed while scrolling */
-  /* overflow-x: hidden; */
+  height: 100%;
+  overflow: auto; /* Allow scrolling */
 }
 
 * {
